<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:background="@color/background"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:gravity="center_horizontal"
              tools:context=".MainActivity">

    <TextView
        android:layout_marginBottom="@dimen/main_title_margin"
        android:textSize="@dimen/main_title_size"
        android:textColor="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_title"/>

    <Button
        android:layout_marginLeft="@dimen/button_horizontal_margin"
        android:layout_marginRight="@dimen/button_horizontal_margin"
        android:layout_marginBottom="@dimen/button_bottom_margin"
        android:id="@+id/button_spotify_streamer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:text="@string/app_name_spotify_streamer"/>

    <Button
        android:layout_marginLeft="@dimen/button_horizontal_margin"
        android:layout_marginRight="@dimen/button_horizontal_margin"
        android:layout_marginBottom="@dimen/button_bottom_margin"
        android:id="@+id/button_football_scores"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:text="@string/app_name_football_scores"/>

    <Button
        android:layout_marginLeft="@dimen/button_horizontal_margin"
        android:layout_marginRight="@dimen/button_horizontal_margin"
        android:layout_marginBottom="@dimen/button_bottom_margin"
        android:id="@+id/button_library"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:text="@string/app_name_library"/>

    <Button
        android:layout_marginLeft="@dimen/button_horizontal_margin"
        android:layout_marginRight="@dimen/button_horizontal_margin"
        android:layout_marginBottom="@dimen/button_bottom_margin"
        android:id="@+id/button_build_it_bigger"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:text="@string/app_name_build_it_bigger"/>

    <Button
        android:layout_marginLeft="@dimen/button_horizontal_margin"
        android:layout_marginRight="@dimen/button_horizontal_margin"
        android:layout_marginBottom="@dimen/button_bottom_margin"
        android:id="@+id/button_xyz_reader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:text="@string/app_name_xyz_reader"/>

    <Button
        android:layout_marginLeft="@dimen/button_horizontal_margin"
        android:layout_marginRight="@dimen/button_horizontal_margin"
        android:layout_marginBottom="@dimen/button_bottom_margin"
        android:background="@color/capstone_button_background"
        android:id="@+id/button_capstone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:text="@string/app_name_capstone"/>

</LinearLayout>
